# Matopeli

./: .gitignore  README.md
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaativuusmaarittely.md
harjoitustyo/: .coverage  .coveragerc  .pylintrc  pyproject.toml  tasks.py
harjoitustyo/dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaativuusmaarittely.md
harjoitustyo/src/: build.py  database_connection.py  form.py  game_loop.py  gameboard.py  index.py  initialize_database.py  instructions_menu.py  levels.py  main_menu.py  menu.py  points.py  pyproject.toml
harjoitustyo/src/entities/: apple.py  gameboard.py  snake.py
harjoitustyo/src/repositories/: apple.py  gameboard.py  leaderboard_repository.py  main.py  points.py  snake.py
harjoitustyo/src/services/: clock.py  form.py  game.py  gameboard.py  instructions_menu.py  leaderboard_menu.py  main_menu.py  points.py  renderer.py  snakegame.py
harjoitustyo/src/tests/entities/: apple_test.py  gameboard_test.py  snake_test.py
harjoitustyo/src/tests/repositories/: leaderboard_repository_test.py  snake_test.py  test_snake.py
harjoitustyo/src/tests/services/: game_test.py  gameboard_test.py  points_test.py  snakegame_test.py
harjoitustyo/src/ui/: form_ui.py  game_ui.py  instructions_menu_ui.py  leaderboard_menu_ui.py  main_menu_ui.py  renderer.py  styling_ui.py  userinterface.py
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
snakegame/: .coveragerc  tasks.py
(+13 files in other folders)
