[tool.poetry]
name = "'maksukortti'"
version = "0.1.0"
description = "'viikko2 tehtävä'"
authors = ["riikkayoki <74421508+riikkayoki@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
